<resources>
    <string name="app_name">listReminder_Mid</string>
    <!-- Strings used for fragments for navigation -->

    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <!--<string name="username">Username</string>-->
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="add">Add</string>
    <string name="History">Logout</string>
    <string name="spizy_transaction">Spizy Transaction</string>

    <string name="id_transaction">ID Transaction</string>



    <string name="spizy_store">Spizy Store</string>
    <string name="title_activity_hompage">Hompage</string>
    <string name="welcome">Welcome</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="view_product">View Product</string>
    <string name="get_product">Get Product</string>
    <string name="title_activity_view">View</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="title_activity_main__product">Main_Product</string>
    <string name="user_id">User ID</string>
    <string name="id_transactionmain">ID Transaction:</string>
    <string name="product">Product:</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="total">Total:</string>
    <string name="description">Description:</string>
    <string name="costomer">Costomer :</string>
    <string name="history">History</string>
</resources>